2009-02-16  Arno Rehn  <arno@arnorehn.de>
	* Add QTextBlock and QTextFrame iterators. operator++ and operator-- are
	  instance members in C++, but map onto static members in C#. Take care of
	  that in CallSmokeMethod().

2009-02-01  Richard Dale  <richard.j.dale@gmail.com>
	* The construct_copy() function was using the full classname of the class
	  to construct which meant that it didn't work with classnames containing
	  '::' scope operators. So strip out the scope part of the classname to
	  create the consructor name.

2009-01-11  Arno Rehn  <arno@arnorehn.de>
	* Implement disconnecting delegates from a signal.

2009-01-10  Arno Rehn  <arno@arnorehn.de>

	* Add QGraphicsItemInternal that implements QGraphicsItem's abstract methods.
	  This should fix a bug reported by Eric Butler.

2008-12-23  Arno Rehn  <arno@arnorehn.de>

	* Add a QList<const char*> marshaller. For the moment it only works in the
	  'ToObject' direction.
	* Add support for on-the-fly compilation of dataengines.

2008-12-20  Arno Rehn  <arno@arnorehn.de>

	* Revert pointerMap to a Dictionary. The crash that was reported by Eric
	  occured because Dictionary isn't thread-safe. Enclose the operations on
	  pointerMap in a lock (pointerMap) { ... } to synchronise the threads and
	  prevent the crash.

2008-12-19  Richard Dale  <richard.j.dale@gmail.com>
	* When the construct_copy() function was used to copy and instance, it
	  wasn't initializing the binding for the new instance. This caused a
	  crash when the destructor for the instance tried to make a callback with
	  the null binding. 

2008-12-16  Arno Rehn  <arno@arnorehn.de>

	* Make the pointerMap a Hashtable instead of a Dictionary - its implementation
	  in Mono seems buggy. This should fix a crash reported by Eric Butler.
	* Add FromArray() convenience method to Pointer<T>.

2008-12-14  Arno Rehn  <arno@arnorehn.de>

	* Don't use StackItem.s_long if we are on a 32 bit platform (i.e. a long isn't