@@ -1,6 +1,7 @@
 namespace Qyoto {
 
 	using System;
+	using System.Reflection;
 	using System.Collections;
 	using System.Runtime.InteropServices;
 	using System.Text;
@@ -44,7 +45,14 @@ namespace Qyoto {
 			CreateProxy();
 			
 			string[] args = new string[argv.Length + 1];
-			args[0] = System.Reflection.Assembly.GetExecutingAssembly().Location;
+			Assembly a = System.Reflection.Assembly.GetEntryAssembly();
+			object[] attrs = a.GetCustomAttributes(typeof(AssemblyTitleAttribute), false);
+			if (attrs.Length > 0) {
+				args[0] = ((AssemblyTitleAttribute) attrs[0]).Title;
+			} else { 
+				QFileInfo info = new QFileInfo(a.Location);
+				args[0] = info.BaseName();
+			}
 			argv.CopyTo(args, 1);
 
 			interceptor.Invoke(	"QCoreApplication$?", 
